--- a/AssistiveTouch8/AssistiveTouch8.vcxproj
+++ b/AssistiveTouch8/AssistiveTouch8.vcxproj
@@ -153,7 +153,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>uxtheme.lib;strsafe.lib;advapi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>uxtheme.lib;strsafe.lib;advapi32.lib;Gdiplus.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>AssistiveTouch8.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
