--- a/Release/Default.ini
+++ b/Release/Default.ini
@@ -1,9 +1,9 @@
 [Click]
 KeyboardValid=1
 Time=1000
-NumberOfKeys=1
-Key1=0x0D
-
+NumberOfKeys=2
+Key1=0x11
+Key2=0x52
 [SlideContinousUp]
 MouseValid=1
 Time=0
@@ -11,7 +11,6 @@ Interval=0
 MouseContinous=1
 MouseButton=0x0800
 WheelMovement=50
-
 [SlideContinousDown]
 MouseValid=1
 Time=0
@@ -19,41 +18,37 @@ Interval=0
 MouseContinous=1
 MouseButton=0x0800
 WheelMovement=-50
-
 [SlideDownLeft]
 KeyboardValid=1
 Time=1000
-NumberOfKeys=2
+NumberOfKeys=3
 Key1=0x11
-Key2=0x53
-
+Key2=0x10
+Key3=0x09
 [SlideUpRight]
 KeyboardValid=1
 Time=1000
 NumberOfKeys=2
 Key1=0x11
-Key2=0x4C
-
+Key2=0x09
 [SlideRight]
-MouseValid=1
-Time=1000
-MouseContinous=0
-MouseButton=0x0008
-MouseButtonUp=0x0010
-WheelMovement=0
-
-[SlideContinousLeft]
 KeyboardValid=1
-Time=0
-Interval=0
-NumberOfKeys=1
+Time=1000
+NumberOfKeys=2
 Key1=0x11
+Key2=0x57
+[SlideLeft]
+KeyboardValid=1
+Time=1000
+NumberOfKeys=2
+Key1=0x11
+Key2=0x54
 
-[Test]
+[SlideContinousUp]
 MouseValid=0
 Time=0
 Interval=0
 MouseContinous=0
-MouseButton=0
+MouseButton=0x0800
 MouseButtonUp=0
 WheelMovement=0
