--- a/AssistiveTouch8/AssistiveTouch8.vcxproj.filters
+++ b/AssistiveTouch8/AssistiveTouch8.vcxproj.filters
@@ -124,5 +124,8 @@
     <Image Include="Icon.png">
       <Filter>Resource</Filter>
     </Image>
+    <Image Include="Cursor.png">
+      <Filter>Resource</Filter>
+    </Image>
   </ItemGroup>
 </Project>
