--- a/Release/Global.ini
+++ b/Release/Global.ini
@@ -1,3 +1,14 @@
 [Settings]
-PosX=1160
-PosY=466
+PosX=1172
+PosY=597
+PointSize=60
+Alpha=150
+DragTime=1500
+TopTime=3000
+
+[Icon]
+Path=None
+
+[MouseControl]
+DragTime=5000
+MoveSpeed=3
