--- a/Release/Opera.ini
+++ b/Release/Opera.ini
@@ -1,12 +1,16 @@
 [Exe]
 Path=C:\Program Files\Opera\20.0.1387.91\opera.exe
 
+[Icon]
+Path=Opera.png
+
 [Click]
 KeyboardValid=1
 Time=1000
 NumberOfKeys=2
 Key1=0x11
 Key2=0x52
+
 [SlideContinousUp]
 MouseValid=1
 Time=0
@@ -14,6 +18,7 @@ Interval=0
 MouseContinous=1
 MouseButton=0x0800
 WheelMovement=50
+
 [SlideContinousDown]
 MouseValid=1
 Time=0
@@ -21,6 +26,7 @@ Interval=0
 MouseContinous=1
 MouseButton=0x0800
 WheelMovement=-50
+
 [SlideDownLeft]
 KeyboardValid=1
 Time=1000
@@ -28,18 +34,21 @@ NumberOfKeys=3
 Key1=0x11
 Key2=0x10
 Key3=0x09
+
 [SlideUpRight]
 KeyboardValid=1
 Time=1000
 NumberOfKeys=2
 Key1=0x11
 Key2=0x09
+
 [SlideRight]
 KeyboardValid=1
 Time=1000
 NumberOfKeys=2
 Key1=0x11
 Key2=0x57
+
 [SlideLeft]
 KeyboardValid=1
 Time=1000
